--- a/aspnet-core/src/XiongHui.Application/XiongHui.Application.csproj
+++ b/aspnet-core/src/XiongHui.Application/XiongHui.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <VersionPrefix>1.0.0.0</VersionPrefix>
     <TargetFramework>netcoreapp1.1</TargetFramework>
@@ -12,6 +12,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\XiongHui.Core\XiongHui.Core.csproj" />
+    <ProjectReference Include="..\XiongHui.EntityFrameworkCore\XiongHui.EntityFrameworkCore.csproj" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
     <Reference Include="System" />
